--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+<h1>hello world</h1>
+<script src="script.js"></script>
 </body>
 </html>
